MP-925 fix overflow on grid hover

--- a/assets/styles/modules/detail.scss
+++ b/assets/styles/modules/detail.scss
@@ -32,6 +32,12 @@ $hover-background-color: $gray-medium-light;
 	border-right: 1px solid $gray;
 }
 
+.grid-view {
+	.media {
+		height: 15em;
+	}
+}
+
 .detail + .detail {
     margin-bottom: 2em;
 }
